--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,170 @@
 /* You can add global styles to this file, and also import other style files */
+
+$col-red: #EE6158;
+$col-blue:#12658D;
+$head-col:#FD3753;
+$list-col-red:#FAF6F6;
+$list-col-blue:#F5F9FF;
+body {
+  font-family: 'Lato', sans-serif;
+  color: #70707D;
+}
+
+.button{
+width: 100%;
+color: #fff;
+text-align: center;
+box-shadow: none;
+border: none;
+padding: 10px;
+
+}
+
+#heading {
+  text-align: center;
+  h2{
+      margin-bottom: 0;
+      margin-top: 0;
+  }
+  p{
+      margin-top: 0;
+  }
+  span {
+    color: $head-col;
+  }
+}
+
+#blocks {
+  display: flex;
+  justify-content: space-evenly;
+  
+  >div{
+      width: 30%;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+>div:last-child{
+  padding:0px 20px 20px 20px;
+}
+  
+  }
+  .block-heading {
+    display: flex;
+    justify-content: space-between;
+    color: #fff;
+    padding: 15px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    font-size: 22px;
+    .sub {
+      font-size: 14px;
+      text-align: right;
+    }
+    >div:first-child .sub {
+      text-align: left;
+    }
+  }
+  .block-main {
+    padding: 20px;
+    
+    p{
+      margin-top: 0;
+    }
+  >div>div{
+display: flex;
+justify-content: flex-start;
+align-items: center;
+>div:first-child{
+    background: url('./assets/icons.png');
+    width: 45px;
+    height: 45px; 
+}
+  }
+}
+  >div:first-child {
+    .block-heading {
+      background: $col-red;
+    }
+    p{
+        color: $col-red;
+    }
+    .block-main{
+        >div>div:nth-child(odd) {
+            background: $list-col-red;
+        }
+        
+    }
+    .lists>div:nth-child(1)>div:first-child{
+      background-position: -5px -5px;
+    }
+    .lists>div:nth-child(2)>div:first-child{
+        background-position: -5px 220px;
+      }.lists>div:nth-child(3)>div:first-child{
+        background-position: -5px 110px;
+      }.lists>div:nth-child(4)>div:first-child{
+        background-position: -5px 595px;
+      }.lists>div:nth-child(5)>div:first-child{
+        background-position: -5px 380px;
+      }
+    button{
+     @extend .button;
+     background: $col-red;   
+    }
+  }
+  >div:last-child {
+    .block-heading {
+      background: $col-blue;
+    }
+    p{
+        color: $col-blue;
+    }
+    .block-main{
+        >div>div:nth-child(odd) {
+            background: $list-col-blue;
+        }
+        .lists>div:nth-child(1)>div:first-child{
+          background-position: -5px 435px;
+        }
+        .lists>div:nth-child(2)>div:first-child{
+            background-position: -5px -170px;
+          }.lists>div:nth-child(3)>div:first-child{
+            background-position: -5px 275px;
+          }.lists>div:nth-child(4)>div:first-child{
+            background-position: -5px 165px;
+          }.lists>div:nth-child(5)>div:first-child{
+            background-position: -5px 50px;
+          }.lists>div:nth-child(6)>div:first-child{
+            background-position: -5px -115px;
+          }.lists>div:nth-child(7)>div:first-child{
+            background-position: -5px -330px;
+          }
+        
+    }
+    button{
+        @extend .button;
+        background: $col-blue;
+    }
+  }
+}
+
+#footer {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  margin-top: 20px;
+  >div:last-child {
+    color: $head-col;
+    margin-left: 10px;
+  }
+}
+
+#test{
+    background: url('./assets/icons.png');
+    width: 45px;
+    height: 45px;
+
+}
